# encrypttui

./: .gitignore  Cargo.toml  README.md
cfgbuilder/: buildcfg.sh  index.js  package.json
cfgbuilder/examples/archlinux/: config.jsonc
cfgbuilder/examples/archlinux/files/: input  lock  logo
initcpio/hooks/: encrypttui
initcpio/install/: encrypttui
src/: layer.rs  lib.rs  main.rs
